# backend-gin/internal/api/docs/swagger.json
@@ -20,17 +20,19 @@
                     {
                         "minLength": 8,
                         "type": "string",
-                        "default": "very_secret",
+                        "example": "very_secret",
                         "description": "The user password, 8 characters at least",
                         "name": "password",
-                        "in": "formData"
+                        "in": "formData",
+                        "required": true
                     },
                     {
                         "type": "string",
-                        "default": "mslimbeji@gmail.com",
+                        "example": "mslimbeji@gmail.com",
                         "description": "The user email (We use username here because of OAuth spec)",
                         "name": "username",
-                        "in": "formData"
+                        "in": "formData",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -61,7 +63,8 @@
                         "example": "mslimbeji@gmail.com",
                         "description": "The user email",
                         "name": "email",
-                        "in": "formData"
+                        "in": "formData",
+                        "required": true
                     },
                     {
                         "minLength": 2,
@@ -69,7 +72,8 @@
                         "example": "Slim Beji",
                         "description": "The user name, two characters at least",
                         "name": "name",
-                        "in": "formData"
+                        "in": "formData",
+                        "required": true
                     },
                     {
                         "minLength": 8,
@@ -77,14 +81,14 @@
                         "example": "very_secret",
                         "description": "The user password, 8 characters at least",
                         "name": "password",
-                        "in": "formData"
+                        "in": "formData",
+                        "required": true
                     },
                     {
                         "type": "file",
                         "description": "User's profile image (JPEG)",
                         "name": "image",
-                        "in": "formData",
-                        "required": true
+                        "in": "formData"
                     }
                 ],
                 "responses": {
@@ -110,7 +114,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/routes.ResponseExample"
+                            "$ref": "#/definitions/routes.HelloResponse"
                         }
                     }
                 }
@@ -136,7 +140,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/routes.ResponseExample"
+                            "$ref": "#/definitions/routes.HelloAdminResponse"
                         }
                     }
                 }
@@ -162,7 +166,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/routes.ResponseExample"
+                            "$ref": "#/definitions/routes.HelloUserResponse"
                         }
                     }
                 }
@@ -194,14 +198,16 @@
                         "example": "Fulham road",
                         "description": "The place address",
                         "name": "address",
-                        "in": "formData"
+                        "in": "formData",
+                        "required": true
                     },
                     {
                         "type": "integer",
                         "example": 123456789,
                         "description": "The ID of the place creator",
                         "name": "creatorId",
-                        "in": "formData"
+                        "in": "formData",
+                        "required": true
                     },
                     {
                         "minLength": 10,
@@ -209,21 +215,24 @@
                         "example": "Stadium of Chelsea football club",
                         "description": "The place description, 10 characters minimum",
                         "name": "description",
-                        "in": "formData"
+                        "in": "formData",
+                        "required": true
                     },
                     {
                         "type": "number",
                         "example": 51.48180425016331,
                         "description": "The latitude of the place",
                         "name": "lat",
-                        "in": "formData"
+                        "in": "formData",
+                        "required": true
                     },
                     {
                         "type": "number",
                         "example": -0.19090418688755467,
                         "description": "The longitude of the place",
                         "name": "lng",
-                        "in": "formData"
+                        "in": "formData",
+                        "required": true
                     },
                     {
                         "minLength": 10,
@@ -231,14 +240,14 @@
                         "example": "Stamford Bridge",
                         "description": "The place title/name, 10 characters minimum",
                         "name": "title",
-                        "in": "formData"
+                        "in": "formData",
+                        "required": true
                     },
                     {
                         "type": "file",
                         "description": "Place Image (JPEG)",
                         "name": "image",
-                        "in": "formData",
-                        "required": true
+                        "in": "formData"
                     }
                 ],
                 "responses": {
@@ -278,7 +287,7 @@
                         },
                         "collectionFormat": "multi",
                         "example": [
-                            "like:Boulevard"
+                            "ilike:Boulevard"
                         ],
                         "description": "The place address",
                         "name": "address",
@@ -313,12 +322,23 @@
                     {
                         "type": "array",
                         "items": {
+                            "enum": [
+                                "id",
+                                "title",
+                                "description",
+                                "address",
+                                "location.lat",
+                                "location.lng",
+                                "imageUrl",
+                                "creatorId",
+                                "createdAt"
+                            ],
                             "type": "string"
                         },
                         "collectionFormat": "csv",
                         "example": [
                             "id",
-                            "title"
+                            "location"
                         ],
                         "description": "Fields to include in the response; omit for full document",
                         "name": "fields",
@@ -383,11 +403,21 @@
                     {
                         "type": "array",
                         "items": {
+                            "enum": [
+                                "createdAt",
+                                "-createdAt",
+                                "title",
+                                "-title",
+                                "description",
+                                "-description",
+                                "address",
+                                "-address"
+                            ],
                             "type": "string"
                         },
                         "collectionFormat": "csv",
                         "example": [
-                            "createdAt"
+                            "-createdAt"
                         ],
                         "description": "Fields to use for sorting. Use the '-' for descending sorting",
                         "name": "sort",
@@ -601,14 +631,17 @@
                         "example": "mslimbeji@gmail.com",
                         "description": "The user email",
                         "name": "email",
-                        "in": "formData"
+                        "in": "formData",
+                        "required": true
                     },
                     {
                         "type": "boolean",
+                        "default": false,
                         "example": false,
                         "description": "Whether the user is an admin or not",
                         "name": "isAdmin",
-                        "in": "formData"
+                        "in": "formData",
+                        "required": true
                     },
                     {
                         "minLength": 2,
@@ -616,7 +649,8 @@
                         "example": "Slim Beji",
                         "description": "The user name, two characters at least",
                         "name": "name",
-                        "in": "formData"
+                        "in": "formData",
+                        "required": true
                     },
                     {
                         "minLength": 8,
@@ -624,14 +658,14 @@
                         "example": "very_secret",
                         "description": "The user password, 8 characters at least",
                         "name": "password",
-                        "in": "formData"
+                        "in": "formData",
+                        "required": true
                     },
                     {
                         "type": "file",
                         "description": "the user profile image",
                         "name": "image",
-                        "in": "formData",
-                        "required": true
+                        "in": "formData"
                     }
                 ],
                 "responses": {
@@ -680,12 +714,21 @@
                     {
                         "type": "array",
                         "items": {
+                            "enum": [
+                                "id",
+                                "name",
+                                "email",
+                                "isAdmin",
+                                "imageUrl",
+                                "places",
+                                "createdAt"
+                            ],
                             "type": "string"
                         },
                         "collectionFormat": "csv",
                         "example": [
                             "id",
-                            "name"
+                            "place"
                         ],
                         "description": "Fields to include in the response; omit for full document",
                         "name": "fields",
@@ -737,11 +780,19 @@
                     {
                         "type": "array",
                         "items": {
+                            "enum": [
+                                "createdAt",
+                                "-createdAt",
+                                "name",
+                                "-name",
+                                "email",
+                                "-email"
+                            ],
                             "type": "string"
                         },
                         "collectionFormat": "csv",
                         "example": [
-                            "createdAt"
+                            "-createdAt"
                         ],
                         "description": "Fields to use for sorting. Use the '-' for descending sorting",
                         "name": "sort",
@@ -919,20 +970,39 @@
         }
     },
     "definitions": {
+        "routes.HelloAdminResponse": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string",
+                    "example": "Hello Admin Slim"
+                }
+            }
+        },
+        "routes.HelloResponse": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string",
+                    "example": "Hello World!"
+                }
+            }
+        },
+        "routes.HelloUserResponse": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string",
+                    "example": "Hello Slim"
+                }
+            }
+        },
         "routes.PlaceDeleteResponse": {
             "type": "object",
             "properties": {
                 "message": {
                     "type": "string",
                     "example": "Deleted place 507f1f77bcf86cd799439011"
-                }
-            }
-        },
-        "routes.ResponseExample": {
-            "type": "object",
-            "properties": {
-                "message": {
-                    "type": "string"
                 }
             }
         },
@@ -1100,7 +1170,7 @@
                         "type": "string"
                     },
                     "example": [
-                        "like:Boulevard"
+                        "ilike:Boulevard"
                     ]
                 },
                 "creatorId": {
@@ -1127,11 +1197,22 @@
                     "description": "Fields to include in the response; omit for full document",
                     "type": "array",
                     "items": {
-                        "type": "string"
+                        "type": "string",
+                        "enum": [
+                            "id",
+                            "title",
+                            "description",
+                            "address",
+                            "location.lat",
+                            "location.lng",
+                            "imageUrl",
+                            "creatorId",
+                            "createdAt"
+                        ]
                     },
                     "example": [
                         "id",
-                        "title"
+                        "location"
                     ]
                 },
                 "id": {
@@ -1181,10 +1262,20 @@
                     "description": "Fields to use for sorting. Use the '-' for descending sorting",
                     "type": "array",
                     "items": {
-                        "type": "string"
+                        "type": "string",
+                        "enum": [
+                            "createdAt",
+                            "-createdAt",
+                            "title",
+                            "-title",
+                            "description",
+                            "-description",
+                            "address",
+                            "-address"
+                        ]
                     },
                     "example": [
-                        "createdAt"
+                        "-createdAt"
                     ]
                 },
                 "title": {
@@ -1209,13 +1300,16 @@
                     }
                 },
                 "page": {
-                    "type": "integer"
+                    "type": "integer",
+                    "example": 1
                 },
                 "totalCount": {
-                    "type": "integer"
+                    "type": "integer",
+                    "example": 40
                 },
                 "totalPages": {
-                    "type": "integer"
+                    "type": "integer",
+                    "example": 2
                 }
             }
         },
@@ -1323,11 +1417,20 @@
                     "description": "Fields to include in the response; omit for full document",
                     "type": "array",
                     "items": {
-                        "type": "string"
+                        "type": "string",
+                        "enum": [
+                            "id",
+                            "name",
+                            "email",
+                            "isAdmin",
+                            "imageUrl",
+                            "places",
+                            "createdAt"
+                        ]
                     },
                     "example": [
                         "id",
-                        "name"
+                        "place"
                     ]
                 },
                 "id": {
@@ -1367,10 +1470,18 @@
                     "description": "Fields to use for sorting. Use the '-' for descending sorting",
                     "type": "array",
                     "items": {
-                        "type": "string"
+                        "type": "string",
+                        "enum": [
+                            "createdAt",
+                            "-createdAt",
+                            "name",
+                            "-name",
+                            "email",
+                            "-email"
+                        ]
                     },
                     "example": [
-                        "createdAt"
+                        "-createdAt"
                     ]
                 }
             }
@@ -1385,13 +1496,16 @@
                     }
                 },
                 "page": {
-                    "type": "integer"
+                    "type": "integer",
+                    "example": 1
                 },
                 "totalCount": {
-                    "type": "integer"
+                    "type": "integer",
+                    "example": 40
                 },
                 "totalPages": {
-                    "type": "integer"
+                    "type": "integer",
+                    "example": 2
                 }
             }
         }
